# wfeditormk66

./: CMakeLists.txt  LICENSE  README.md  wfeditormk66.cbp
src/: base.cpp  base.h  visuals.cpp  visuals.h  watchface.cpp  watchface.h  window.cpp  window.h
wfcompress/: CMakeLists.txt  wfcompress.cbp  wfcompress.cpp
